# hotchain

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DOXYGEN_GUIDELINES.md  Doxyfile  Doxygen guidelines.md  README.md  build.sh  eos.doxygen  genesis.json  readme.txt
Docker/: Dockerfile  entrypoint.sh  eosc.sh
account /: readme.txt
api/: readme.txt
api/app/: application.cpp
asset/: readme.txt
chain/: chain_controller.cpp
consensus/: readme.txt
contract/: readme.txt
contracts/currency/: Makefile  currency.cpp  currency.hpp  currency.wast.hpp
contracts/dice/: README.md
contracts/eos/: block_tests.cpp  eos.cpp  main.cpp
contracts/eoslib/: contracts.dox  db.h  db.hpp  eos.hpp  eosc.dox  howto_build.dox  mainpage.md  math.h  math.hpp  memory.h  memory.hpp  message.h  message.hpp  print.h  print.hpp  rpc.dox  token.hpp  transaction.hpp  types.h  types.hpp
contracts/exchange/: exchange.cpp
contracts/hotclib/: db.h  db.hpp  print.hpp  token.hpp
contracts/infinite.cpp/: infinite.cpp  infinite.hpp
contracts/simpledb/: simpledb.abi  simpledb.cpp
contracts/test_api/: api_tests.cpp  test_api.cpp  test_api.hpp  test_crypto.cpp  test_db.cpp  test_math.cpp  test_message.cpp  test_print.cpp  test_types.cpp
debug/: authority_tests.cpp  operation_tests2.cpp  readme.txt
docs/: group_eosc.html  p2p_setup.txt
egenesis/: genesis.json  readme.txt
lib/: readme.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  plugin.cpp
libraries/app/include/hotc/app/: api.hpp  api_access.hpp  application.hpp  plugin.hpp
libraries/chain/: CMakeLists.txt  block_database.cpp  chain_controller.cpp  database.cpp  db_block.cpp  db_debug.cpp  db_getter.cpp  db_init.cpp  db_maint.cpp  db_management.cpp  db_producer_schedule.cpp  db_update.cpp  evaluator.cpp  fork_database.cpp  genesis_state.cpp  get_config.cpp  message_handling_contexts.cpp  wasm_interface.cpp
libraries/chain/include/hotc/chain/: account_object.hpp  authority.hpp  authority_checker.cpp  block_database.hpp  block_summary_object.hpp  chain_controller.hpp  chain_property_object.hpp  config.hpp  database.hpp  db_with.hpp  evaluator.hpp  exceptions.hpp  fork_database.hpp  genesis_state.hpp  get_config.hpp  global_property_object.hpp  immutable_chain_parameters.hpp  internal_exceptions.hpp  key_value_object.hpp  message.hpp  message_handling_contexts.hpp  node_property_object.hpp  operation_history_object.hpp  producer_object.hpp  transaction.hpp  transaction_evaluation_state.hpp  transaction_object.hpp  types.hpp  wasm_interface.hpp
libraries/chain/include/hotc/chain/protocol/: README.md  authority.hpp  base.hpp  block.hpp  chain_parameters.hpp  config.hpp  ext.hpp  operations.hpp  protocol.hpp  transaction.hpp  types.hpp
libraries/chain/protocol/: block.cpp  operations.cpp  transaction.cpp  types.cpp
libraries/deterministic_openssl_rand/: CMakeLists.txt  deterministic_openssl_rand.cpp
libraries/egenesis/: CMakeLists.txt  egenesis_brief.cpp.tmpl  egenesis_full.cpp.tmpl  egenesis_none.cpp  embed_genesis.cpp
libraries/egenesis/include/hotc/egenesis/: egenesis.hpp
libraries/fc/: CMakeLists.txt
libraries/net/: CMakeLists.txt  core_messages.cpp  message_oriented_connection.cpp  node.cpp  peer_connection.cpp  peer_database.cpp  stcp_socket.cpp
libraries/net/include/hotc/net/: config.hpp  core_messages.hpp  exceptions.hpp  message.hpp  message_oriented_connection.hpp  node.hpp  peer_connection.hpp  peer_database.hpp  stcp_socket.hpp
libraries/plugins/account_history_api_plugin/: account_history_api_plugin.cpp
libraries/plugins/account_history_plugin/: account_history_plugin.cpp
libraries/plugins/debug_producer/: CMakeLists.txt  debug_api.cpp  debug_producer.cpp
libraries/plugins/debug_producer/include/hotc/debug_producer/: debug_api.hpp  debug_producer.hpp
libraries/plugins/producer/: CMakeLists.txt  producer.cpp
libraries/plugins/producer/include/hotc/producer/: producer.hpp
libraries/types/: AbiSerializer.cpp  CMakeLists.txt  type_generator.cpp  types.eos
libraries/types/include/hotc/types/: AbSerializer.cpp  native.hpp
libraries/utilities/: CMakeLists.txt  git_revision.cpp.in  key_conversion.cpp  string_escape.cpp  tempdir.cpp  words.cpp
market/: readme.txt
network/: readme.txt
node/: readme.txt
plugins/: make_new_plugin.sh
plugins/account_history_api_plugin/: CMakeLists.txt  account_history_api_plugin.cpp
plugins/account_history_plugin/: account_history_plugin.cpp
plugins/chain_api_plugin/: chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  chain_plugin.cpp
plugins/chain_plugin/include/hotc/chain_plugin/: chain_plugin.hpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/native_system_contract_plugin/: CMakeLists.txt  native_system_contract_plugin.cpp
plugins/net_plugin/: CMakeLists.txt  net_plugin.cpp
plugins/p2p_plugin/: CMakeLists.txt
plugins/template_plugin/: CMakeLists.txt  template_plugin.cpp  template_plugin.hpp
plugins/wallet_api_plugin/: wallet_api_plugin.cpp
plugins/wallet_plugin/: wallet.cpp  wallet_manager.cpp
programs/: CMakeLists.txt
programs/build_helpers/: CMakeLists.txt  check_reflect.py  member_enumerator.cpp
programs/debug_node/: CMakeLists.txt  main.cpp
programs/eosc/: CMakeLists.txt  help_text.cpp  httpc.cpp  httpc.cpp.rej  main.cpp
programs/eosd/: main.cpp
programs/launcher/: main.cpp
programs/producer_node/: CMakeLists.txt  main.cpp
programs/size_checker/: CMakeLists.txt  main.cpp
programs/snapshot/src/: calculator.js  classes.js  config.js  (+1 more)
scripts/: install_dependendes.sh
test/: fee_tests.cpp  readme.txt
test/cli/: main.cpp
tests/: CMakeLists.txt  eosd_run_test.sh
tests/P2P_tests/init/: run_test.pl
tests/api_tests/: api_tests.cpp
tests/common/: database_fixture.cpp  database_fixture.hpp  macro_support.hpp
tests/slow_tests/: slow_tests.cpp
tests/slow_tests/memory_test/: memory_test.cpp
tests/tests/: block_tests.cpp  database_tests.cpp  main.cpp  misc_tests.cpp  system_contract_tests.cpp  wallet_tests.cpp
tests/tests/show_tests/: show_tests.cpp
tools/: eoscpp
(+20 files in other folders)
